# mandelBrot

./: CMakeLists.txt  README.md  main.cpp  mandelBrot.vcxproj  output_image.ppm  speedupReport.docx
